syntax = "proto3";

option go_package = "github.com/iotaledger/hive.go/autopeering/selection/proto";

package proto;

message PeeringRequest {
  // unix time
  int64 timestamp = 1;
  // requesting channel
  int32 channel = 2;
}

message PeeringResponse {
  // hash of the corresponding request
  bytes req_hash = 1;
  // response of a peering request
  bool status = 2;
}

message PeeringDrop {
  // unix time
  int64 timestamp = 1;
}
